<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:layout_alignParentBottom="true"
    android:id="@+id/rlMenuPopup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:padding="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAddingInfo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/menu_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addingItemInfo"
                android:fontFamily="monospace"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

       <RelativeLayout
           android:id="@+id/rlBtns"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginTop="18dp"
           android:padding="4dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/clAddingInfo"
           app:layout_constraintEnd_toEndOf="parent">

           <Button
               android:id="@+id/btnIncome"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentStart="true"
               android:backgroundTint="@color/btnIncome"
               android:text="@string/btnIncome"
               android:textStyle="bold"
               android:enabled="false"
               android:textColor="@color/white"
               android:fontFamily="monospace"/>

           <Button
               android:id="@+id/btnExpense"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:backgroundTint="@color/btnExpense"
               android:text="@string/btnExpense"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:fontFamily="monospace"/>
       </RelativeLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>