<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:padding="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ccTrip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/btn_add"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <!--Text-->
            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/info"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!--First input style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:hint="@string/amount"
                app:boxBackgroundMode="outline"
                style="@style/MyTextInputLayout"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Second input (an spinner)-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDropDownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:startIconDrawable="@drawable/ic_category_tinted"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilAmount"


                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                style="@style/MyTextInputLayout2"
                >

                <AutoCompleteTextView
                    android:id="@+id/tvMenuOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Button-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/bntAddQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:text="@string/btnAdd"
                android:textColor="@android:color/white"
                android:visibility="visible"
                android:backgroundTint="@color/bg_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilDropDownMenu"
                app:layout_constraintVertical_bias="0.424"

                app:cornerRadius="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>